--- a/cfg/cfgogl/vanillamod/shared_plugins.cfg
+++ b/cfg/cfgogl/vanillamod/shared_plugins.cfg
@@ -158,7 +158,7 @@ sm plugins load optional/l4d2_tank_facts_announce.smx
 sm plugins load optional/alltalk-before-round-start.smx    
 sm plugins load optional/ddos-protection.smx
 sm plugins load optional/l4d2_queue.smx
-sm plugins load optional/mix.smx
+sm plugins load optional/l4d_mix.smx
 sm plugins load optional/t1-saferoom.smx
 sm plugins load optional/l4d2_give_ammo.smx
 sm plugins load optional/l4d2_playstats_sync.smx
