--- a/cfg/cfgogl/zonemod/shared_cvars.cfg
+++ b/cfg/cfgogl/zonemod/shared_cvars.cfg
@@ -155,5 +155,8 @@ confogl_addcvar l4d_spot_marker_spot_marked_msg 0
 // [l4d2_playstats_sync.smx]
 confogl_addcvar playstats_server "zone4mod"
 
+// [l4d_mix.smx]
+confogl_addcvar l4d_mix_select_order 2
+
 // Stripper Path
 confogl_addcvar stripper_cfg_path cfg/stripper/zonemod
