--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -158,7 +158,7 @@ sm plugins load optional/l4d2_tank_facts_announce.smx
 sm plugins load optional/alltalk-before-round-start.smx    
 sm plugins load optional/ddos-protection.smx
 sm plugins load optional/l4d2_queue.smx
-sm plugins load optional/l4d_mix.smx
+sm plugins load optional/l4d2_mix.smx
 sm plugins load optional/l4d2_spectating_cheat.smx
 sm plugins load optional/spec_silence.smx
 sm plugins load optional/l4d2_connect_announce.smx
