--- a/cfg/server.cfg
+++ b/cfg/server.cfg
@@ -1,6 +1,6 @@
-hostname "Vanilla 4 Mod"
-motdfile "vanilla-motd.txt"
-hostfile "vanilla-host.txt"
+hostname "Zone 4 Mod"
+motdfile "zone-motd.txt"
+hostfile "zone-host.txt"
 
 exec server_secret.cfg
 exec banned_user.cfg
@@ -24,11 +24,11 @@ sv_pure_kick_clients "1"                 // If set to 1, the server will kick cl
 
 // [Logging]
 // ----------------------------------------------------------------------- 
-log off                                  //Creates a logfile (on | off)
+log on                                   //Creates a logfile (on | off)
 sv_logecho 0                             //default 0; Echo log information to the console.
-sv_logfile 0                             //default 1; Log server information in the log file.
+sv_logfile 1                             //default 1; Log server information in the log file.
 sv_log_onefile 0                         //default 0; Log server information to only one file.
-sv_logbans 0                             //default 0;Log server bans in the server logs.
+sv_logbans 1                             //default 0;Log server bans in the server logs.
 sv_logflush 0                            //default 0; Flush the log files to disk on each write (slow).
 sv_logsdir logs                          //Folder in the game directory where server logs will be stored.
 
