Show witch HP on respawn

--- a/cfg/cfgogl/vanillamod/shared_cvars.cfg
+++ b/cfg/cfgogl/vanillamod/shared_cvars.cfg
@@ -142,6 +142,7 @@ confogl_addcvar versus_witch_chance_intro 1
 confogl_addcvar versus_witch_chance 1
 confogl_addcvar versus_witch_chance_finale 1
 
+confogl_addcvar z_witch_health 2000
 confogl_addcvar z_witch_damage_per_kill_hit 60
 confogl_addcvar z_witch_personal_space 250
 confogl_addcvar z_frustration_spawn_delay 30
