--- a/cfg/cfgogl/vanillamod/shared_plugins.cfg
+++ b/cfg/cfgogl/vanillamod/shared_plugins.cfg
@@ -173,6 +173,7 @@ sm plugins load optional/l4d_sm_respawn.smx
 sm plugins load optional/l4d_spot_marker.smx
 sm plugins load optional/l4d_countdown.smx
 sm plugins load optional/l4d_death_item_glow.smx
+sm plugins load optional/l4d2_show_witch_hp_on_respawn.smx
 
 //---------------------------
 // Witch fixes
