--- a/cfg/cfgogl/vanillamod/shared_settings.cfg
+++ b/cfg/cfgogl/vanillamod/shared_settings.cfg
@@ -314,7 +314,6 @@ sm_weapon pumpshotgun scatteryaw 5
 //  [Hunting rifle Tweaks 'n Stuff]  //
 /////////////////////////////
 sm_weapon hunting_rifle rangemod 0.85 // default 1
-sm_weapon hunting_rifle clipsize 15   // default 15
 
 /////////////////////////////
 //  [Rifle AK-47 Tweaks 'n Stuff]  //
@@ -322,6 +321,16 @@ sm_weapon hunting_rifle clipsize 15   // default 15
 sm_weapon rifle_ak47 damage 45 // default 58
 sm_weapon rifle_ak47 spreadpershot 0.5 // default 1.60
 sm_weapon rifle_ak47 maxmovespread 3.0 // default 6.00
+
+/////////////////////////////
+//  [Rifle Desert Tweaks 'n Stuff]  //
+/////////////////////////////
+sm_weapon rifle_desert damage 40 // default 44
+
+/////////////////////////////
+//  [Shotgun SPAS Tweaks 'n Stuff]  //
+/////////////////////////////
+sm_weapon shotgun_spas cycletime 0.3 // default 0.15
 
 ///////////////////
 // [Boss tweaks] //
