--- a/cfg/cfgogl/vanillamod/shared_settings.cfg
+++ b/cfg/cfgogl/vanillamod/shared_settings.cfg
@@ -43,6 +43,10 @@ confogl_addcvar l4d2_tank_prop_glow_only       0
 confogl_addcvar l4d2_tank_prop_glow_spectators 1
 confogl_addcvar l4d2_tank_prop_dissapear_time  10.0
 
+// [l4d2_tankrage]
+confogl_addcvar l4d2_tankrage_flowpercent 7
+confogl_addcvar l4d2_tankrage_freezetime 4.0
+
 // [l4d2_sound_manipulation.smx]
 confogl_addcvar sound_flags 7
 
@@ -263,15 +267,11 @@ confogl_addcvar sm_max_lerp 1
 // [starting_items.smx]
 confogl_addcvar starting_item_flags 4
 
-// [cfg_motd.smx]
-confogl_addcvar sm_cfgmotd_title "VanillaMod 2.0"
-confogl_addcvar sm_cfgmotd_url "https://github.com/altair-sossai/l4d2-zone-server"
-
 // [l4d2_hybrid_scoremod.smx]
-confogl_addcvar sm2_bonus_per_survivor_multiplier 0.25
-confogl_addcvar sm2_permament_health_proportion 0.5
-confogl_addcvar sm2_pills_hp_factor 0.5
-confogl_addcvar sm2_pills_max_bonus 25
+confogl_addcvar sm2_bonus_per_survivor_multiplier 0.5
+confogl_addcvar sm2_permament_health_proportion 0.65
+confogl_addcvar sm2_pills_hp_factor 4.0
+confogl_addcvar sm2_pills_max_bonus 100
 
 // [l4d2_tank_horde_monitor.smx]
 confogl_addcvar l4d2_tank_bypass_extra_flow 1500
