--- a/cfg/server.cfg
+++ b/cfg/server.cfg
@@ -1,6 +1,4 @@
-hostname "Zone 4 Mod"
-motdfile "zone-motd.txt"
-hostfile "zone-host.txt"
+hostname "Lata de lixo"
 
 exec server_secret.cfg
 exec banned_user.cfg
