Update bequiet cfg

--- a/cfg/cfgogl/vanillamod/shared_cvars.cfg
+++ b/cfg/cfgogl/vanillamod/shared_cvars.cfg
@@ -160,6 +160,10 @@ confogl_addcvar vs_survival_bonus 25
 // [spec_silence.smx]
 confogl_addcvar l4d2_spec_silence_enabled 1
 
+// [bequiet.smx]
+confogl_addcvar bq_name_change_suppress 1
+confogl_addcvar bq_name_change_spec_suppress 1
+
 // [l4d_spot_marker.smx]
 confogl_addcvar l4d_spot_marker_duration 7.5
 confogl_addcvar l4d_spot_marker_cooldown 1.0
