--- a/cfg/cfgogl/zonemod/shared_cvars.cfg
+++ b/cfg/cfgogl/zonemod/shared_cvars.cfg
@@ -135,5 +135,9 @@ confogl_addcvar tank_ground_pound_duration 0.1
 // [spec_silence.smx]
 confogl_addcvar l4d2_spec_silence_enabled 1
 
+// [bequiet.smx]
+confogl_addcvar bq_name_change_suppress 1
+confogl_addcvar bq_name_change_spec_suppress 1
+
 // Stripper Path
 confogl_addcvar stripper_cfg_path cfg/stripper/zonemod
