--- a/cfg/server.cfg
+++ b/cfg/server.cfg
@@ -1,11 +1,11 @@
-hostname "Lata de Lixo - Competitive Rework"
+hostname "BR | ZoneMod | Competitive Rework"
 
 exec banned_user.cfg
 
 sv_contact "altairsossai@gmail.com"
 
 sv_steamgroup "103582791473750881"
-sv_steamgroup_exclusive "1"
+sv_steamgroup_exclusive "0"
 
 sm_cvar confogl_match_execcfg_plugins "generalfixes.cfg;confogl_plugins.cfg;sharedplugins.cfg"
 
