update admin list

--- a/addons/sourcemod/configs/admins_simple.ini
+++ b/addons/sourcemod/configs/admins_simple.ini
@@ -7,5 +7,8 @@
 // phantom
 "STEAM_0:1:61280105" "99:z"
 
-// cobra
-"STEAM_0:1:79546535" "99:z"
+// Dudu
+"STEAM_0:0:58109627" "99:z"
+
+// Adeilson Killer
+"STEAM_0:1:51820269" "99:z"
