--- a/addons/sourcemod/configs/admins_simple.ini
+++ b/addons/sourcemod/configs/admins_simple.ini
@@ -12,3 +12,9 @@
 
 // Adeilson Killer
 "STEAM_0:1:51820269" "99:z"
+
+// cobra
+"STEAM_0:1:79546535" "99:z"
+
+// Andre20062100PR
+"STEAM_0:1:51820269" "abcd"
