--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -163,6 +163,7 @@ sm plugins load optional/l4d2_connect_announce.smx
 sm plugins load optional/l4d2_tank_is_comming.smx
 sm plugins load optional/l4d_sm_respawn.smx
 sm plugins load optional/l4d_death_item_glow.smx
+sm plugins load optional/l4d2_playstats_sync.smx
 
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
