--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,13 +10,30 @@ variables:
 stages:
 - stage: Deploy
   jobs:
-  - job: UploadAddons
+  - job: CompressAndUpload
     steps:
+    - script: |
+        tar -czf addons.tar.gz -C $(Build.Repository.LocalPath)/addons .
+        tar -czf cfg.tar.gz -C $(Build.Repository.LocalPath)/cfg .
+        tar -czf scripts.tar.gz -C $(Build.Repository.LocalPath)/scripts .
+      displayName: 'Compress files'
+
     - task: CopyFilesOverSSH@0
       inputs:
         sshEndpoint: $(sshServiceConnection)
-        sourceFolder: '$(Build.Repository.LocalPath)/cfg'
-        contents: '**'
+        sourceFolder: '$(Build.Repository.LocalPath)'
+        contents: '*.tar.gz'
         targetFolder: '/home/devops'
         cleanTargetFolder: false
         overwrite: true
+        readyTimeout: '20000'
+
+    - task: SSH@0
+      inputs:
+        sshEndpoint: $(sshServiceConnection)
+        readyTimeout: '20000'
+        script: |
+          tar -xzf /home/devops/addons.tar.gz -C /home/test/addons
+          tar -xzf /home/devops/cfg.tar.gz -C /home/test/cfg
+          tar -xzf /home/devops/scripts.tar.gz -C /home/test/scripts
+          rm /home/devops/*.tar.gz
