--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ stages:
     - script: |
         tar -czf addons.tar.gz -C $(Build.Repository.LocalPath)/addons .
         tar -czf cfg.tar.gz -C $(Build.Repository.LocalPath)/cfg .
+        tar -czf bash.tar.gz -C $(Build.Repository.LocalPath)/bash .
         tar -czf scripts.tar.gz -C $(Build.Repository.LocalPath)/scripts .
       displayName: 'Compress files'
 
@@ -33,7 +34,10 @@ stages:
         sshEndpoint: $(sshServiceConnection)
         readyTimeout: '20000'
         commands: |
-          tar -xzf /home/devops/addons.tar.gz -C /home/test/addons
-          tar -xzf /home/devops/cfg.tar.gz -C /home/test/cfg
-          tar -xzf /home/devops/scripts.tar.gz -C /home/test/scripts
+          tar -xzf /home/devops/addons.tar.gz -C /home/steam/l4d2/left4dead2/addons
+          tar -xzf /home/devops/bash.tar.gz -C /home/steam/l4d2/left4dead2/bash
+          tar -xzf /home/devops/cfg.tar.gz -C /home/steam/l4d2/left4dead2/cfg
+          tar -xzf /home/devops/scripts.tar.gz -C /home/steam/l4d2/left4dead2/scripts
+          dos2unix /home/steam/l4d2/left4dead2/bash/*.sh
+          chmod +x /home/steam/l4d2/left4dead2/bash/*.sh
           rm /home/devops/*.tar.gz
