chore: Update server.cfg with new download URL

--- a/cfg/server.cfg
+++ b/cfg/server.cfg
@@ -86,6 +86,8 @@ sm_cvar sv_clockcorrection_msecs 25           // This one makes laggy players ha
 
 sm_cvar sv_vote_kick_ban_duration 0
 sm_cvar sv_vote_issue_kick_allowed 1
+
+sm_cvar sv_downloadurl "https://l4d2playstats.blob.core.windows.net/fastdl"
 sm_cvar sv_allowupload 0
 sm_cvar sv_allowdownload 1
 
