--- a/cfg/cfgogl/zonemod/shared_cvars.cfg
+++ b/cfg/cfgogl/zonemod/shared_cvars.cfg
@@ -138,7 +138,7 @@ confogl_addcvar bq_name_change_spec_suppress 1
 
 // [l4d2_playstats_sync.smx]
 confogl_addcvar playstats_endpoint "https://l4d2-playstats-api.azurewebsites.net"
-confogl_addcvar playstats_web_url "http://l4d2.com.br"
+confogl_addcvar playstats_web_url "http://104.234.63.254:5000"
 confogl_addcvar playstats_localhost_url "http://localhost:5000"
 
 // Stripper Path
