--- a/addons/sourcemod/configs/sourcebans/sourcebans.cfg
+++ b/addons/sourcemod/configs/sourcebans/sourcebans.cfg
@@ -13,7 +13,7 @@
 	"Config"
 	{
 		// Website address to tell where the player to go for unban, etc
-		"Website"			"http://www.yourwebsite.net/"
+		"Website"			"http://104.234.63.254:5010/"
 
 		// Allow or disallow admins access to addban command
 		"Addban"			"1"
@@ -45,7 +45,7 @@
 		"RequireSiteLogin"	"0"
 
 		// This is the ID of this server (Check in the admin panel -> servers to find the ID of this server)
-		"ServerID"		"-1"
+		"ServerID"		"1"
 	}
 
 	/*
