chore: Update SourceBans website URL configuration

--- a/addons/sourcemod/configs/sourcebans/sourcebans.cfg
+++ b/addons/sourcemod/configs/sourcebans/sourcebans.cfg
@@ -13,7 +13,7 @@
 	"Config"
 	{
 		// Website address to tell where the player to go for unban, etc
-		"Website"			"http://104.234.63.254:5010/"
+		"Website"			"https://sourcebans.l4d2.com.br/"
 
 		// Allow or disallow admins access to addban command
 		"Addban"			"1"
