chore: Update playstats_patent_icon_version and add max_patent_level configuration

--- a/cfg/cfgogl/zonemod/shared_cvars.cfg
+++ b/cfg/cfgogl/zonemod/shared_cvars.cfg
@@ -141,6 +141,7 @@ confogl_addcvar playstats_endpoint "https://l4d2-playstats-api.azurewebsites.net
 confogl_addcvar playstats_web_url "http://104.234.63.254:5000"
 confogl_addcvar playstats_localhost_url "http://localhost:5000"
 confogl_addcvar playstats_patent_icon_version 2
+confogl_addcvar playstats_max_patent_level 15
 
 // Stripper Path
 confogl_addcvar stripper_cfg_path cfg/stripper/zonemod
