chore: Add l4d2_show_patent_icon plugin and update related configurations

--- a/cfg/cfgogl/zonemod/shared_cvars.cfg
+++ b/cfg/cfgogl/zonemod/shared_cvars.cfg
@@ -140,8 +140,11 @@ confogl_addcvar bq_name_change_spec_suppress 1
 confogl_addcvar playstats_endpoint "https://l4d2-playstats-api.azurewebsites.net"
 confogl_addcvar playstats_web_url "http://104.234.63.254:5000"
 confogl_addcvar playstats_localhost_url "http://localhost:5000"
-confogl_addcvar playstats_patent_icon_version 2
-confogl_addcvar playstats_max_patent_level 15
+
+// [l4d2_show_patent_icon.smx]
+confogl_addcvar patent_icon_api_url "https://l4d2.com.br"
+confogl_addcvar patent_icon_version 2
+confogl_addcvar patent_icon_max_level 15
 
 // Stripper Path
 confogl_addcvar stripper_cfg_path cfg/stripper/zonemod
