feat: Add l4d2_ranking plugin and update related configurations

--- a/cfg/cfgogl/zonemod/shared_cvars.cfg
+++ b/cfg/cfgogl/zonemod/shared_cvars.cfg
@@ -137,8 +137,10 @@ confogl_addcvar bq_name_change_suppress 1
 confogl_addcvar bq_name_change_spec_suppress 1
 
 // [l4d2_playstats_sync.smx]
-confogl_addcvar playstats_endpoint "https://l4d2-playstats-api.azurewebsites.net"
-confogl_addcvar playstats_web_url "http://104.234.63.254:5000"
+confogl_addcvar playstats_url "https://l4d2-playstats-api.azurewebsites.net"
+
+// [l4d2_ranking.smx]
+confogl_addcvar ranking_url "http://104.234.63.254:5000"
 
 // [l4d2_show_patent_icon.smx]
 confogl_addcvar patent_icon_api_url "https://l4d2.com.br"
