--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -164,6 +164,7 @@ sm plugins load optional/l4d2_tank_is_comming.smx
 sm plugins load optional/l4d_sm_respawn.smx
 sm plugins load optional/l4d_death_item_glow.smx
 sm plugins load optional/l4d2_playstats_sync.smx
+sm plugins load optional/l4d2_ranking.smx
 sm plugins load optional/l4d2_show_patent_icon.smx
 sm plugins load optional/l4d2_localhost.smx
 
