feat: Add l4d2_ragequit_prevent plugin and update related configurations

--- a/cfg/cfgogl/zonemod/shared_cvars.cfg
+++ b/cfg/cfgogl/zonemod/shared_cvars.cfg
@@ -147,6 +147,13 @@ confogl_addcvar patent_icon_api_url "https://l4d2.com.br"
 confogl_addcvar patent_icon_version 2
 confogl_addcvar patent_icon_max_level 15
 
+// [l4d2_ragequit_prevent.smx]
+confogl_addcvar rq_days_banned 2
+confogl_addcvar rq_max_ragequit 5
+confogl_addcvar rq_limit_until_ban_in_minutes 5
+confogl_addcvar rq_max_players_punished 3
+confogl_addcvar rq_punishment_gap_in_seconds 15
+
 // [l4d2_localhost.smx]
 confogl_addcvar localhost_url "http://localhost:5000"
 
