--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -166,6 +166,7 @@ sm plugins load optional/l4d_death_item_glow.smx
 sm plugins load optional/l4d2_playstats_sync.smx
 sm plugins load optional/l4d2_ranking.smx
 sm plugins load optional/l4d2_show_patent_icon.smx
+sm plugins load optional/l4d2_ragequit_prevent.smx
 sm plugins load optional/l4d2_localhost.smx
 
 // Letzzzz go.
