feat: Add l4d2_ragequit_prevent plugin and update related configurations

--- a/cfg/cfgogl/zonemod/shared_cvars.cfg
+++ b/cfg/cfgogl/zonemod/shared_cvars.cfg
@@ -151,6 +151,7 @@ confogl_addcvar patent_icon_max_level 15
 confogl_addcvar rq_days_banned 2
 confogl_addcvar rq_max_ragequit 5
 confogl_addcvar rq_limit_until_ban_in_minutes 5
+confogl_addcvar rq_add_time_when_in_ready_in_minutes 3
 confogl_addcvar rq_max_players_punished 3
 confogl_addcvar rq_punishment_gap_in_seconds 15
 
