--- a/cfg/cfgogl/zonemod/shared_cvars.cfg
+++ b/cfg/cfgogl/zonemod/shared_cvars.cfg
@@ -148,12 +148,12 @@ confogl_addcvar patent_icon_version 2
 confogl_addcvar patent_icon_max_level 15
 
 // [l4d2_ragequit_prevent.smx]
-confogl_addcvar rq_days_banned 2
-confogl_addcvar rq_max_ragequit 5
-confogl_addcvar rq_limit_until_ban_in_minutes 6
-confogl_addcvar rq_add_time_when_in_ready_in_minutes 3
-confogl_addcvar rq_max_players_punished 2
-confogl_addcvar rq_punishment_gap_in_seconds 15
+confogl_addcvar rq_ban_duration_days 2
+confogl_addcvar rq_max_abandonment_before_no_penalty 5
+confogl_addcvar rq_return_time_limit_minutes 6
+confogl_addcvar rq_ready_state_additional_time_minutes 3
+confogl_addcvar rq_max_simultaneous_punishments 2
+confogl_addcvar rq_penalty_time_frame_seconds 15
 
 // [l4d2_localhost.smx]
 confogl_addcvar localhost_url "http://localhost:5000"
