--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -142,6 +142,7 @@ sm plugins load optional/l4d2_magnum_incap.smx
 //---------------------------
 // ZoneMod Plugins
 //---------------------------
+sm plugins load optional/l4d2-custom-commands.smx
 sm plugins load optional/spec-lister.smx
 
 //---------------------------
@@ -157,8 +158,10 @@ sm plugins load optional/l4d2_tank_facts_announce.smx
 sm plugins load optional/alltalk-before-round-start.smx    
 sm plugins load optional/l4d2_queue.smx
 sm plugins load optional/l4d2_mix.smx
+sm plugins load optional/l4d2_spectating_cheat.smx
 sm plugins load optional/l4d2_connect_announce.smx
 sm plugins load optional/l4d2_tank_is_comming.smx
+sm plugins load optional/l4d_sm_respawn.smx
 sm plugins load optional/l4d_death_item_glow.smx
 sm plugins load optional/l4d2_playstats_sync.smx
 sm plugins load optional/l4d2_ranking.smx
