--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  sshServiceConnection: 'L4D2'
+  sshServiceConnection: 'L4D2 - Server'
 
 stages:
 - stage: Deploy
