chore: Update SourceBans++ plugin paths in generalfixes.cfg

--- a/cfg/generalfixes.cfg
+++ b/cfg/generalfixes.cfg
@@ -70,12 +70,12 @@ sm plugins load fixes/l4d2_tank_spawn_antirock_protect.smx
 sm plugins load anticheat/l4d2_noghostcheat.smx
 
 // Sourcebans++
-sm plugins load sbpp_main.smx
-sm plugins load sbpp_sleuth.smx
-sm plugins load sbpp_report.smx
-sm plugins load sbpp_comms.smx
-sm plugins load sbpp_checker.smx
-sm plugins load sbpp_admcfg.smx
+sm plugins load sourcebans/sbpp_main.smx
+sm plugins load sourcebans/sbpp_sleuth.smx
+sm plugins load sourcebans/sbpp_report.smx
+sm plugins load sourcebans/sbpp_comms.smx
+sm plugins load sourcebans/sbpp_checker.smx
+sm plugins load sourcebans/sbpp_admcfg.smx
 
 // Auto Restart.
 sm plugins load linux_auto_restart.smx
