feat: Add l4d2_open_ai plugin for enabling Open AI in the server

--- a/cfg/cfgogl/zonemod/shared_cvars.cfg
+++ b/cfg/cfgogl/zonemod/shared_cvars.cfg
@@ -158,5 +158,8 @@ confogl_addcvar rq_ready_state_additional_time_minutes 3
 confogl_addcvar rq_max_simultaneous_punishments 2
 confogl_addcvar rq_penalty_time_frame_seconds 15
 
+// [l4d2_open_ai.smx]
+confogl_addcvar open_ai_url "https://l4d2.com.br/api/open-ai/last-match"
+
 // Stripper Path
 confogl_addcvar stripper_cfg_path cfg/stripper/zonemod
