--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -168,6 +168,7 @@ sm plugins load optional/l4d2_ranking.smx
 sm plugins load optional/l4d2_show_patent_icon.smx
 sm plugins load optional/l4d2_localhost.smx
 sm plugins load optional/l4d2_ragequit_prevent.smx
+sm plugins load optional/l4d2_open_ai.smx
 
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
