--- a/addons/sourcemod/configs/admins_simple.ini
+++ b/addons/sourcemod/configs/admins_simple.ini
@@ -9,3 +9,12 @@
 
 // cobra
 "STEAM_0:1:79546535" "99:z"
+
+// tom
+"STEAM_0:1:150243815" "99:z"
+
+// hard
+"STEAM_0:1:598701106" "99:z"
+
+// serenity
+"STEAM_0:1:52529729" "99:z"
