Add new banned user to cfg/banned_user.cfg

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -4,3 +4,10 @@ banid 0 STEAM_0:1:27241890
 banid 0 STEAM_1:1:27241890
 banid 0 STEAM_0:1:129367226
 banid 0 STEAM_1:1:129367226
+
+// Name: **
+// Ban date: 2017-07-17
+// Expire in: Never
+// Ban reason: Possibly the player megs
+banid 0 STEAM_0:1:16756138
+banid 0 STEAM_1:1:16756138
