--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -6,8 +6,15 @@ banid 0 STEAM_0:1:129367226
 banid 0 STEAM_1:1:129367226
 
 // Name: **
-// Ban date: 2017-07-17
+// Ban date: 2024-09-01
 // Expire in: Never
 // Ban reason: Possibly the player megs
 banid 0 STEAM_0:1:16756138
 banid 0 STEAM_1:1:16756138
+
+// Name: Lanz1
+// Ban date: 2024-09-15
+// Expire in: 2024-09-23
+// Ban reason: Abandoning the game
+banid 0 STEAM_0:0:153835942
+banid 0 STEAM_1:0:153835942
