Remove unnecessary entries from admins_simple.ini and add ban for Misaki in banned_user.cfg

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -18,3 +18,10 @@ banid 0 STEAM_1:1:16756138
 // Ban reason: Abandoning the game
 banid 0 STEAM_0:0:153835942
 banid 0 STEAM_1:0:153835942
+
+// Name: Misaki
+// Ban date: 2024-09-20
+// Expire in: 2024-09-24
+// Ban reason: Abandoning the game
+banid 0 STEAM_0:1:6289671
+banid 0 STEAM_1:1:6289671
