Update admins_simple.ini with new admin "Misaki"

--- a/addons/sourcemod/configs/admins_simple.ini
+++ b/addons/sourcemod/configs/admins_simple.ini
@@ -7,9 +7,6 @@
 // Adeilson Killer
 "STEAM_0:1:51820269" "99:z"
 
-// cobra
-"STEAM_0:1:79546535" "99:z"
-
 // tom
 "STEAM_0:1:150243815" "99:z"
 
@@ -18,3 +15,6 @@
 
 // serenity
 "STEAM_0:1:52529729" "99:z"
+
+// Misaki
+"STEAM_0:1:6289671" "99:z"
