--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -18,3 +18,12 @@ banid 0 STEAM_1:1:16756138
 // Ban reason: Voting among administrators due to problematic past
 banid 0 STEAM_0:0:50212424
 banid 0 STEAM_1:0:50212424
+
+// Name: Andre20062100PR
+// Ban date: 2024-10-15
+// Expire in: 2024-10-30
+// Ban reason: Rage quit multiple times, 
+//             initiated votes to kick players without any valid reason, 
+//             and used racist language on the server.
+banid 0 STEAM_0:0:563052836
+banid 0 STEAM_1:0:563052836
