Add ban for player Andre20062100PR

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -27,3 +27,10 @@ banid 0 STEAM_1:0:50212424
 //             and used racist language on the server.
 banid 0 STEAM_0:0:563052836
 banid 0 STEAM_1:0:563052836
+
+// Name: aqua
+// Ban date: 2024-10-15
+// Expire in: 2024-10-30
+// Ban reason: Andre20062100PR smurf account
+banid 0 STEAM_0:1:869805890
+banid 0 STEAM_1:1:869805890
