--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -21,16 +21,20 @@ banid 0 STEAM_1:0:50212424
 
 // Name: Andre20062100PR
 // Ban date: 2024-10-15
-// Expire in: 2024-10-30
-// Ban reason: Rage quit multiple times, 
-//             initiated votes to kick players without any valid reason, 
-//             and used racist language on the server.
+// Expire in: never
 banid 0 STEAM_0:0:563052836
 banid 0 STEAM_1:0:563052836
 
 // Name: aqua
 // Ban date: 2024-10-15
-// Expire in: 2024-10-30
+// Expire in: never
 // Ban reason: Andre20062100PR smurf account
 banid 0 STEAM_0:1:869805890
 banid 0 STEAM_1:1:869805890
+
+// Name: unforgivable moments
+// Ban date: 2024-10-19
+// Expire in: never
+// Ban reason: Andre20062100PR smurf account
+banid 0 STEAM_0:1:839928586
+banid 0 STEAM_1:1:839928586
