Refactor banned_user.cfg to add permanent ban for player Andre20062100PR

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -38,3 +38,10 @@ banid 0 STEAM_1:1:869805890
 // Ban reason: Andre20062100PR smurf account
 banid 0 STEAM_0:1:839928586
 banid 0 STEAM_1:1:839928586
+
+// Name: Fortune Tiger
+// Ban date: 2024-10-19
+// Expire in: never
+// Ban reason: Andre20062100PR smurf account
+banid 0 STEAM_0:1:834924052
+banid 0 STEAM_1:1:834924052
