Refactor banned_user.cfg to add permanent ban for player Andre20062100PR and xXObielWolfBRXx

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -45,3 +45,10 @@ banid 0 STEAM_1:1:839928586
 // Ban reason: Andre20062100PR smurf account
 banid 0 STEAM_0:1:834924052
 banid 0 STEAM_1:1:834924052
+
+// Name: xXObielWolfBRXx
+// Ban date: 2024-10-19
+// Expire in: never
+// Ban reason: Andre20062100PR smurf account
+banid 0 STEAM_0:1:232886824
+banid 0 STEAM_1:1:232886824
