Refactor banned_user.cfg to add permanent ban for player Andre20062100PR and xXObielWolfBRXx

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -52,3 +52,11 @@ banid 0 STEAM_1:1:834924052
 // Ban reason: Andre20062100PR smurf account
 banid 0 STEAM_0:1:232886824
 banid 0 STEAM_1:1:232886824
+
+// Name: RED
+// Ban date: 2024-10-20
+// Expire in: never
+// Ban reason: Andre20062100PR smurf account
+// IP: 177.55.228.127:49907
+banid 0 STEAM_0:1:914430633
+banid 0 STEAM_1:1:914430633
