Add permanent ban for player Andre20062100PR and xXObielWolfBRXx in banned_user.cfg

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -60,3 +60,10 @@ banid 0 STEAM_1:1:232886824
 // IP: 177.55.228.127:49907
 banid 0 STEAM_0:1:914430633
 banid 0 STEAM_1:1:914430633
+
+// Name: kimchi
+// Ban date: 2024-10-21
+// Expire in: never
+// Ban reason: Andre20062100PR smurf account
+banid 0 STEAM_0:1:447887734
+banid 0 STEAM_1:1:447887734
