--- a/devops/l4d2-update.yml
+++ b/devops/l4d2-update.yml
@@ -1,6 +1,3 @@
-trigger:
-- master
-
 pool:
   vmImage: 'ubuntu-latest'
 
@@ -17,5 +14,7 @@ stages:
       inputs:
         sshEndpoint: $(sshServiceConnection)
         readyTimeout: '20000'
-        runOptions: 'script'
-        scriptPath: '/home/steam/l4d2/left4dead2/bash/update.sh'
+        runOptions: 'inline'
+        script: |
+          cd /home/steam/l4d2/left4dead2/bash
+          sudo ./update.sh
