--- a/devops/l4d2-update.yml
+++ b/devops/l4d2-update.yml
@@ -15,6 +15,6 @@ stages:
         sshEndpoint: $(sshServiceConnection)
         readyTimeout: '20000'
         runOptions: 'inline'
-        script: |
+        inline: |
           cd /home/steam/l4d2/left4dead2/bash
           sudo ./update.sh
