Update l4d2_localhost.sp and shared_cvars.cfg

--- a/cfg/cfgogl/zonemod/shared_cvars.cfg
+++ b/cfg/cfgogl/zonemod/shared_cvars.cfg
@@ -150,6 +150,7 @@ confogl_addcvar patent_icon_max_level 15
 
 // [l4d2_localhost.smx]
 confogl_addcvar localhost_url "http://localhost:5000"
+confogl_addcvar localhost_type "url"
 
 // Stripper Path
 confogl_addcvar stripper_cfg_path cfg/stripper/zonemod
