Add L4D2 Game Info Sync plugin and configuration

--- a/cfg/cfgogl/zonemod/shared_cvars.cfg
+++ b/cfg/cfgogl/zonemod/shared_cvars.cfg
@@ -153,5 +153,8 @@ confogl_addcvar patent_icon_max_level 15
 confogl_addcvar localhost_url "http://localhost:5000"
 confogl_addcvar localhost_type "url"
 
+// [l4d2_gameinfo_sync.smx]
+confogl_addcvar gameinfo_url "https://l4d2.com.br"
+
 // Stripper Path
 confogl_addcvar stripper_cfg_path cfg/stripper/zonemod
