Comment out L4D2 Game Info Sync plugin loading in shared_plugins.cfg

--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -168,7 +168,7 @@ sm plugins load optional/l4d2_ranking.smx
 sm plugins load optional/l4d2_show_patent_icon.smx
 sm plugins load optional/l4d2_localhost.smx
 sm plugins load optional/l4d2_no_skip_getup_animation.smx
-sm plugins load optional/l4d2_gameinfo_sync.smx
+//sm plugins load optional/l4d2_gameinfo_sync.smx
 
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
