Add banned user entries for grisly and update existing ban records

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -61,3 +61,10 @@ banid 0 STEAM_1:1:914430633
 // Ban reason: Andre20062100PR smurf account
 banid 0 STEAM_0:1:447887734
 banid 0 STEAM_1:1:447887734
+
+// Name: grisly
+// Ban date: 2024-11-11
+// Expire in: never
+// Ban reason: boring as fuck!
+banid 0 STEAM_0:0:35565972
+banid 0 STEAM_1:0:35565972
