--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -7,7 +7,7 @@ banid 0 STEAM_1:1:129367226
 
 // Name: **
 // Ban date: 2024-09-01
-// Expire in: Never
+// Expire in: never
 // Ban reason: Possibly the player megs
 banid 0 STEAM_0:1:16756138
 banid 0 STEAM_1:1:16756138
@@ -68,17 +68,3 @@ banid 0 STEAM_1:1:447887734
 // Ban reason: Boring as fuck!
 banid 0 STEAM_0:0:35565972
 banid 0 STEAM_1:0:35565972
-
-// Name: vorkyss
-// Ban date: 2024-11-13
-// Expire in: 2024-11-20
-// Ban reason: Has quit the game twice when is losing
-banid 0 STEAM_0:0:644202307
-banid 0 STEAM_1:0:644202307
-
-// Name: neo | Samyaza
-// Ban date: 2024-11-13
-// Expire in: 2024-11-27
-// Ban reason: Has quit the game midway several times
-banid 0 STEAM_0:1:62797461
-banid 0 STEAM_1:1:62797461
