--- a/addons/sourcemod/configs/admins_simple.ini
+++ b/addons/sourcemod/configs/admins_simple.ini
@@ -4,9 +4,6 @@
 // Fear
 "STEAM_0:0:87803377" "99:z"
 
-// Adeilson Killer
-"STEAM_0:1:51820269" "99:z"
-
 // tom
 "STEAM_0:1:150243815" "99:z"
 
@@ -18,3 +15,6 @@
 
 // Misaki
 "STEAM_0:1:6289671" "99:z"
+
+// cobrx
+"STEAM_0:1:79546535" "99:z"
