Add ban entries for user 'Lpz *' due to frequent rq's and trolling

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -68,3 +68,10 @@ banid 0 STEAM_1:1:447887734
 // Ban reason: Boring as fuck!
 banid 0 STEAM_0:0:35565972
 banid 0 STEAM_1:0:35565972
+
+// Name: Lpz * (the shadow)
+// Ban date: 2024-12-03
+// Expire in: 2025-01-03
+// Ban reason: Frequent rq's and trolling
+banid 0 STEAM_0:0:60297616
+banid 0 STEAM_1:0:60297616
