--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -75,3 +75,17 @@ banid 0 STEAM_1:0:35565972
 // Ban reason: Frequent rq's and trolling
 banid 0 STEAM_0:0:60297616
 banid 0 STEAM_1:0:60297616
+
+// Name: ΛDV
+// Ban date: 2024-12-06
+// Expire in: never
+// Ban reason: Trolling
+banid 0 STEAM_0:0:737822618
+banid 0 STEAM_1:0:737822618
+
+// Name: Zxc
+// Ban date: 2024-12-06
+// Expire in: never
+// Ban reason: Trolling
+banid 0 STEAM_0:1:79507439
+banid 0 STEAM_1:1:79507439
