Add ban entries for user 'Andre20062100PR' due to ragequit

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -89,3 +89,10 @@ banid 0 STEAM_1:0:737822618
 // Ban reason: Trolling
 banid 0 STEAM_0:1:79507439
 banid 0 STEAM_1:1:79507439
+
+// Name: Andre20062100PR
+// Ban date: 2024-10-15
+// Expire in: never
+// Ban reason: Ragequit
+banid 0 STEAM_0:0:563052836
+banid 0 STEAM_1:0:563052836
