--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -91,8 +91,15 @@ banid 0 STEAM_0:1:79507439
 banid 0 STEAM_1:1:79507439
 
 // Name: Andre20062100PR
-// Ban date: 2024-10-15
+// Ban date: 2024-12-07
 // Expire in: never
 // Ban reason: Ragequit
 banid 0 STEAM_0:0:563052836
 banid 0 STEAM_1:0:563052836
+
+// Name: X-
+// Ban date: 2024-12-07
+// Expire in: never
+// Ban reason: Lpz smurf account
+banid 0 STEAM_0:0:558713684
+banid 0 STEAM_1:0:558713684
