--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -103,3 +103,10 @@ banid 0 STEAM_1:0:563052836
 // Ban reason: Lpz smurf account
 banid 0 STEAM_0:0:558713684
 banid 0 STEAM_1:0:558713684
+
+// Name: vorkyss
+// Ban date: 2024-12-10
+// Expire in: 2025-01-10
+// Ban reason: Frequent rq's
+banid 0 STEAM_0:0:644202307
+banid 0 STEAM_1:0:644202307
