Add ban entries for user 'AI CALICA' due to smurfing

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -104,6 +104,13 @@ banid 0 STEAM_1:0:563052836
 banid 0 STEAM_0:0:558713684
 banid 0 STEAM_1:0:558713684
 
+// Name: AI CALICA
+// Ban date: 2024-12-14
+// Expire in: never
+// Ban reason: Lpz smurf account
+banid 0 STEAM_0:1:535686539
+banid 0 STEAM_1:1:535686539
+
 // Name: vorkyss
 // Ban date: 2024-12-10
 // Expire in: 2025-01-10
