Add ban entries for user 'waled' due to wallhack

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -117,3 +117,10 @@ banid 0 STEAM_1:1:535686539
 // Ban reason: Frequent rq's
 banid 0 STEAM_0:0:644202307
 banid 0 STEAM_1:0:644202307
+
+// Name: waled
+// Ban date: 2024-12-15
+// Expire in: 2025-06-15
+// Ban reason: Wallhack (at least lol)
+banid 0 STEAM_0:1:580446927
+banid 0 STEAM_1:1:580446927
