--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -117,3 +117,10 @@ banid 0 STEAM_1:1:535686539
 // Ban reason: Frequent rq's
 banid 0 STEAM_0:0:644202307
 banid 0 STEAM_1:0:644202307
+
+// Name: Gewësse
+// Ban date: 2024-12-20
+// Expire in: 2025-01-20
+// Ban reason: Frequent rq's
+banid 0 STEAM_0:1:62797461
+banid 0 STEAM_1:1:62797461
