Add new bans for user accounts with expiration details

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -89,3 +89,10 @@ banid 0 STEAM_1:0:558713684
 // Ban reason: Lpz smurf account
 banid 0 STEAM_0:1:535686539
 banid 0 STEAM_1:1:535686539
+
+// Name: inc
+// Ban date: 2025-01-08
+// Expire in: 2025-02-08
+// Ban reason: rq
+banid 0 STEAM_0:0:50212424
+banid 0 STEAM_1:0:50212424
