Add new bans for additional user accounts

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -4,6 +4,8 @@ banid 0 STEAM_0:1:27241890
 banid 0 STEAM_1:1:27241890
 banid 0 STEAM_0:1:129367226
 banid 0 STEAM_1:1:129367226
+banid 0 STEAM_0:1:802607197
+banid 0 STEAM_1:1:802607197
 
 // Name: **
 // Ban date: 2024-09-01
