Add witch-related plugins and configuration settings

--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -171,6 +171,12 @@ sm plugins load optional/l4d2_localhost.smx
 sm plugins load optional/l4d2_no_skip_getup_animation.smx
 sm plugins load optional/l4d2_gameinfo_sync.smx
 
+//---------------------------
+// Witch Plugins
+//---------------------------
+sm plugins load optional/simple_witch_bonus.smx 
+sm plugins load optional/l4d_witch_damage_announce.smx
+
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
 sm plugins load match_vote.smx
