--- a/cfg/cfgogl/zonemod/shared_settings.cfg
+++ b/cfg/cfgogl/zonemod/shared_settings.cfg
@@ -165,6 +165,7 @@ ledge_block_square hf01_theforest -456.402832 -4714.641113 -345.698212 -4595.220
 // [l4d2_godframes_control.smx + l4d2_getup_fixes.smx]
 confogl_addcvar gfc_hittable_override 1
 confogl_addcvar gfc_hittable_rage_override 1
+confogl_addcvar gfc_witch_override 1
 confogl_addcvar gfc_rock_override 0
 confogl_addcvar gfc_rock_rage_override 1
 confogl_addcvar gfc_spit_extra_time 0.4
@@ -236,6 +237,7 @@ confogl_addcvar l4d2_disable_si_friendly_staggers 2
 // [l4d2_si_ffblock.smx]
 confogl_addcvar l4d2_block_infected_ff 1
 confogl_addcvar l4d2_infected_ff_allow_tank 1
+confogl_addcvar l4d2_infected_ff_block_witch 1
 
 // [l4d2_survivor_ff.smx]
 confogl_addcvar l4d2_undoff_enable			7
