Add new configuration variables and plugins for enhanced gameplay features

--- a/cfg/cfgogl/neomod/shared_cvars.cfg
+++ b/cfg/cfgogl/neomod/shared_cvars.cfg
@@ -132,7 +132,27 @@ confogl_addcvar director_tank_lottery_selection_time 3
 confogl_addcvar z_frustration_spawn_delay 25
 confogl_addcvar z_frustration_los_delay 1.2
 confogl_addcvar tankcontrol_print_all 1
+confogl_addcvar tankcontrol_force_window 20
 confogl_addcvar tank_ground_pound_duration 0.1
+
+// [bequiet.smx]
+confogl_addcvar bq_name_change_suppress 1
+confogl_addcvar bq_name_change_spec_suppress 1
+
+// [l4d2_playstats_sync.smx]
+confogl_addcvar playstats_url "https://l4d2-playstats-api.azurewebsites.net"
+
+// [l4d2_ranking.smx]
+confogl_addcvar ranking_url "http://104.234.63.254:5000"
+confogl_addcvar ranking_show_motd_panel "1"
+
+// [l4d2_show_patent_icon.smx]
+confogl_addcvar patent_icon_api_url "https://l4d2.com.br"
+confogl_addcvar patent_icon_version 2
+confogl_addcvar patent_icon_max_level 15
+
+// [l4d2_gameinfo_sync.smx]
+confogl_addcvar gameinfo_url "https://l4d2.com.br"
 
 // Stripper Path
 confogl_addcvar stripper_cfg_path cfg/stripper/neomod
