--- a/cfg/cfgogl/neomod/shared_plugins.cfg
+++ b/cfg/cfgogl/neomod/shared_plugins.cfg
@@ -13,6 +13,7 @@
 sm plugins load basebans.smx
 sm plugins load basecommands.smx
 sm plugins load basecomm.smx
+sm plugins load basevotes.smx
 sm plugins load admin-flatfile.smx
 sm plugins load adminhelp.smx
 sm plugins load adminmenu.smx
@@ -141,6 +142,36 @@ sm plugins load optional/witch_and_tankifier.smx
 sm plugins unload fixes/l4d2_lagcomp_manager.smx
 sm plugins load optional/l4d_rock_lagcomp.smx
 sm plugins load optional/l4d2_magnum_incap.smx
+
+//---------------------------
+// ZoneMod Plugins
+//---------------------------
+sm plugins load optional/l4d2-custom-commands.smx
+sm plugins load optional/spec-lister.smx
+
+//---------------------------
+// MoYu_Server_Stupid_Plugins
+// https://github.com/Target5150/MoYu_Server_Stupid_Plugins
+//---------------------------
+sm plugins load optional/l4d2_score_difference.smx
+sm plugins load optional/l4d2_tank_facts_announce.smx
+
+//---------------------------
+// Custom Plugins
+//---------------------------
+sm plugins load optional/alltalk-before-round-start.smx    
+sm plugins load optional/l4d2_queue.smx
+sm plugins load optional/l4d2_mix.smx
+sm plugins load optional/l4d2_spectating_cheat.smx
+sm plugins load optional/l4d2_connect_announce.smx
+sm plugins load optional/l4d2_tank_is_comming.smx
+sm plugins load optional/l4d_sm_respawn.smx
+sm plugins load optional/l4d_death_item_glow.smx
+sm plugins load optional/l4d2_playstats_sync.smx
+sm plugins load optional/l4d2_ranking.smx
+sm plugins load optional/l4d2_show_patent_icon.smx
+sm plugins load optional/l4d2_no_skip_getup_animation.smx
+sm plugins load optional/l4d2_gameinfo_sync.smx
 
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
