Update admin privileges in admins_simple.ini for better access control

--- a/addons/sourcemod/configs/admins_simple.ini
+++ b/addons/sourcemod/configs/admins_simple.ini
@@ -1,3 +1,7 @@
+//
+// https://wiki.alliedmods.net/Adding_Admins_(SourceMod)
+//
+
 // Altair
 "STEAM_0:0:90628109" "99:z"
 
@@ -5,13 +9,10 @@
 "STEAM_0:0:87803377" "99:z"
 
 // tom
-"STEAM_0:1:150243815" "99:z"
+"STEAM_0:1:150243815" "90:z"
 
 // hard
-"STEAM_0:1:598701106" "99:z"
+"STEAM_0:1:598701106" "90:z"
 
 // serenity
-"STEAM_0:1:52529729" "99:z"
-
-// cobrx
-"STEAM_0:1:79546535" "99:z"
+"STEAM_0:1:52529729" "50:abcdgik"
