Update banned users and change upload settings in server configuration

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -91,3 +91,10 @@ banid 0 STEAM_1:0:558713684
 // Ban reason: Lpz smurf account
 banid 0 STEAM_0:1:535686539
 banid 0 STEAM_1:1:535686539
+
+// Name: dakota
+// Ban date: 2025-03-27
+// Expire in: never
+// Ban reason: rq
+banid 0 STEAM_0:0:563052836
+banid 0 STEAM_1:0:563052836
