--- a/cfg/cfgogl/vanillamod/shared_settings.cfg
+++ b/cfg/cfgogl/vanillamod/shared_settings.cfg
@@ -87,6 +87,7 @@ confogl_addcvar crc_global 1
 
 // [si_fire_immunity.smx]
 confogl_addcvar infected_fire_immunity 0
+confogl_addcvar tank_fire_immunity 0
 
 // [l4d2_nosecondchances.smx]
 confogl_addcvar bot_kick_delay 0
@@ -197,8 +198,8 @@ confogl_addcvar gfc_ff_min_time 0.8
 
 // [l4dhots.smx]
 confogl_addcvar l4d_pills_hot 1
-confogl_addcvar l4d_pills_hot_interval 0.05
-confogl_addcvar l4d_pills_hot_increment 1
+confogl_addcvar l4d_pills_hot_interval 0.01
+confogl_addcvar l4d_pills_hot_increment 2
 confogl_addcvar l4d_pills_hot_total 50
 
 // [l4d2_m2_control.smx]
@@ -261,17 +262,14 @@ confogl_addcvar sm_unsilentjockey_interval 2.0
 
 // [l4d2_weaponrules.smx]
 l4d2_addweaponrule smg_mp5                smg_silenced
-l4d2_addweaponrule rifle                  smg
 l4d2_addweaponrule rifle_desert           smg
 l4d2_addweaponrule rifle_ak47             smg_silenced
-l4d2_addweaponrule rifle_sg552            smg
-l4d2_addweaponrule autoshotgun            pumpshotgun
-l4d2_addweaponrule shotgun_spas           shotgun_chrome
+l4d2_addweaponrule shotgun_spas           autoshotgun
 l4d2_addweaponrule sniper_military        hunting_rifle
 l4d2_addweaponrule sniper_scout           hunting_rifle
 l4d2_addweaponrule sniper_awp             hunting_rifle
-l4d2_addweaponrule grenade_launcher       pistol
-l4d2_addweaponrule rifle_m60              pistol_magnum
+l4d2_addweaponrule grenade_launcher       rifle
+l4d2_addweaponrule rifle_m60              rifle
 
 // [l4d2_collision_adjustments.smx]
 confogl_addcvar collision_tankrock_common 1
@@ -295,8 +293,8 @@ confogl_addcvar starting_item_flags 4
 
 // [l4d2_hybrid_scoremod.smx]
 confogl_addcvar sm2_bonus_per_survivor_multiplier 0.25
-confogl_addcvar sm2_permament_health_proportion 0.5
-confogl_addcvar sm2_pills_hp_factor 4.0
+confogl_addcvar sm2_permament_health_proportion 0.75
+confogl_addcvar sm2_pills_hp_factor 2.0
 confogl_addcvar sm2_pills_max_bonus 100
 
 // [l4d2_tank_horde_monitor.smx]
