--- a/cfg/cfgogl/vanillamod/vanillamod.cfg
+++ b/cfg/cfgogl/vanillamod/vanillamod.cfg
@@ -51,6 +51,8 @@ l4d_wlimits_add 3 1 weapon_smg_silenced weapon_smg
 l4d_wlimits_add 3 1 weapon_pumpshotgun weapon_shotgun_chrome
 l4d_wlimits_add 1 0 weapon_pistol_magnum
 l4d_wlimits_add 0 1 weapon_hunting_rifle weapon_sniper_scout weapon_sniper_awp
+l4d_wlimits_add 1 1 rifle rifle_sg552
+l4d_wlimits_add 1 1 autoshotgun
 l4d_wlimits_lock
 
 // [l4d2_melee_shenanigans.smx]
