Add new banned user entries for hp10 due to suspected aim assistance

--- a/cfg/banned_user.cfg
+++ b/cfg/banned_user.cfg
@@ -91,3 +91,12 @@ banid 0 STEAM_1:0:558713684
 // Ban reason: Lpz smurf account
 banid 0 STEAM_0:1:535686539
 banid 0 STEAM_1:1:535686539
+
+// Name: hp10
+// Ban date: 2025-04-26
+// Expire in: never
+// Ban reason: Probably using aim
+STEAM_0:1:743420152
+STEAM_1:1:743420152
+STEAM_0:1:558008344
+STEAM_1:1:558008344
