--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -160,15 +160,13 @@ sm plugins load optional/l4d2_tank_facts_announce.smx
 sm plugins load optional/alltalk-before-round-start.smx    
 sm plugins load optional/l4d2_queue.smx
 sm plugins load optional/l4d2_mix.smx
-sm plugins load optional/l4d2_spectating_cheat.smx
+//sm plugins load optional/l4d2_spectating_cheat.smx
 sm plugins load optional/l4d2_connect_announce.smx
 sm plugins load optional/l4d2_tank_is_comming.smx
-sm plugins load optional/l4d_sm_respawn.smx
 sm plugins load optional/l4d_death_item_glow.smx
 sm plugins load optional/l4d2_playstats_sync.smx
 sm plugins load optional/l4d2_ranking.smx
 sm plugins load optional/l4d2_show_patent_icon.smx
-sm plugins load optional/l4d2_localhost.smx
 sm plugins load optional/l4d2_no_skip_getup_animation.smx
 sm plugins load optional/l4d2_gameinfo_sync.smx
 
