Add debug functionality to queue management: implement ConVar for debug output and enhance FixTeams logic with detailed debug prints.

--- a/cfg/cfgogl/zonemod/shared_cvars.cfg
+++ b/cfg/cfgogl/zonemod/shared_cvars.cfg
@@ -154,12 +154,11 @@ confogl_addcvar patent_icon_api_url "https://l4d2.com.br"
 confogl_addcvar patent_icon_version 2
 confogl_addcvar patent_icon_max_level 15
 
-// [l4d2_localhost.smx]
-confogl_addcvar localhost_url "http://localhost:5000"
-confogl_addcvar localhost_type "url"
-
 // [l4d2_gameinfo_sync.smx]
 confogl_addcvar gameinfo_url "https://l4d2.com.br"
+
+// [l4d2_queue.smx]
+confogl_addcvar l4d2_queue_debug 1
 
 // Stripper Path
 confogl_addcvar stripper_cfg_path cfg/stripper/zonemod
