Update sshServiceConnection variable to include host identifier

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  sshServiceConnection: 'L4D2 - Server'
+  sshServiceConnection: 'L4D2 - Server (enxadahost)'
 
 stages:
 - stage: Deploy
