--- a/devops/l4d2-update.yml
+++ b/devops/l4d2-update.yml
@@ -2,7 +2,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  sshServiceConnection: 'L4D2 - Server (enxadahost)'
+  sshServiceConnection: 'L4D2 - Server'
 
 stages:
 - stage: L4D2ServerUpdate 
