--- a/cfg/server.cfg
+++ b/cfg/server.cfg
@@ -1,4 +1,4 @@
-hostname "Cobra Gaming | Competitive"
+hostname "l4d2.com.br | Competitive"
 
 motdfile "motd.txt"
 hostfile "host.txt"
@@ -10,7 +10,7 @@ sv_contact "altairsossai@gmail.com"
 
 sv_steamgroup "103582791473750881"
 sv_steamgroup_exclusive "1"
-sv_search_key "Cobra Gaming | Competitive"
+sv_search_key "l4d2.com.br | Competitive"
 
 sm_cvar confogl_match_execcfg_plugins "generalfixes.cfg;confogl_plugins.cfg;sharedplugins.cfg"
 
