Add Azure CLI task for asset upload and new sprite materials

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,3 +75,17 @@ stages:
             --source "$(Build.Repository.LocalPath)/assets" \
             --pattern "*" \
             --overwrite
+
+    - task: AzureCLI@2
+      displayName: 'Upload fastdl'
+      inputs:
+        azureSubscription: 'PessoalSubscription'
+        scriptType: 'bash'
+        scriptLocation: 'inlineScript'
+        inlineScript: |
+          az storage blob upload-batch \
+            --account-name l4d2playstats \
+            --destination fastdl \
+            --source "$(Build.Repository.LocalPath)/fastdl" \
+            --pattern "*" \
+            --overwrite
