Remove banned users from banned_user.cfg and update display names in azure-pipelines.yml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,10 +17,10 @@ stages:
         tar -czf cfg.tar.gz -C $(Build.Repository.LocalPath)/cfg .
         tar -czf bash.tar.gz -C $(Build.Repository.LocalPath)/bash .
         tar -czf scripts.tar.gz -C $(Build.Repository.LocalPath)/scripts .
-      displayName: 'Compress folders into tar.gz files'
+      displayName: '📦 Compress folders into .tar.gz files'
 
     - task: SSH@0
-      displayName: 'Clean remote .tar.gz files'
+      displayName: '🧹 Clean remote .tar.gz files'
       inputs:
         sshEndpoint: $(sshServiceConnection)
         readyTimeout: '20000'
@@ -28,7 +28,7 @@ stages:
           rm -f /home/devops/*.tar.gz
 
     - task: CopyFilesOverSSH@0
-      displayName: 'Upload compressed files to server'
+      displayName: '📤 Upload compressed files to server'
       inputs:
         sshEndpoint: $(sshServiceConnection)
         sourceFolder: '$(Build.Repository.LocalPath)'
@@ -39,7 +39,7 @@ stages:
         readyTimeout: '20000'
 
     - task: CopyFilesOverSSH@0
-      displayName: 'Upload host and motd files to game folder'
+      displayName: '📄 Upload host and motd files to game directory'
       inputs:
         sshEndpoint: $(sshServiceConnection)
         sourceFolder: '$(Build.Repository.LocalPath)'
@@ -52,7 +52,7 @@ stages:
         readyTimeout: '20000'
 
     - task: SSH@0
-      displayName: 'Extract files on server and set permissions'
+      displayName: '🛠️ Extract files on server and set permissions'
       inputs:
         sshEndpoint: $(sshServiceConnection)
         readyTimeout: '20000'
@@ -67,7 +67,7 @@ stages:
           rm /home/devops/*.tar.gz
 
     - task: AzureCLI@2
-      displayName: 'Upload game assets to Azure Blob Storage'
+      displayName: '☁️ Upload game assets to Azure Blob Storage'
       inputs:
         azureSubscription: 'PessoalSubscription'
         scriptType: 'bash'
@@ -81,7 +81,7 @@ stages:
             --overwrite
 
     - task: AzureCLI@2
-      displayName: 'Upload FastDL files to Azure Blob Storage'
+      displayName: '⚡ Upload FastDL files to Azure Blob Storage'
       inputs:
         azureSubscription: 'PessoalSubscription'
         scriptType: 'bash'
