Revert "Remove l4d2_show_patent_icon plugin from optional plugins list"
This reverts commit 44d618bb8a6d8f88dc630023afdf77ec5cf8f4a3.

--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -164,6 +164,7 @@ sm plugins load optional/l4d2_tank_is_comming.smx
 sm plugins load optional/l4d_death_item_glow.smx
 sm plugins load optional/l4d2_playstats_sync.smx
 sm plugins load optional/l4d2_ranking.smx
+sm plugins load optional/l4d2_show_patent_icon.smx
 sm plugins load optional/l4d2_no_skip_getup_animation.smx
 sm plugins load optional/l4d2_gameinfo_sync.smx
 
