--- a/cfg/cfgogl/neomod/shared_plugins.cfg
+++ b/cfg/cfgogl/neomod/shared_plugins.cfg
@@ -170,7 +170,7 @@ sm plugins load optional/l4d2_playstats_sync.smx
 sm plugins load optional/l4d2_ranking.smx
 sm plugins load optional/l4d2_show_patent_icon.smx
 sm plugins load optional/l4d2_no_skip_getup_animation.smx
-sm plugins load optional/l4d2_gameinfo_sync.smx
+sm plugins load l4d2_gameinfo_sync.smx
 
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
